<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient">

        <ImageView
            android:id="@+id/star_inner"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/star_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/star_mid"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:src="@drawable/star_circle"
            android:alpha="0.3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/star_outter"
            android:layout_width="114dp"
            android:layout_height="114dp"
            android:src="@drawable/star_circle"
            android:alpha="0.6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/starBright"
            android:layout_width="208dp"
            android:layout_height="208dp"
            android:src="@drawable/star_on_bright"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bonte_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:fontFamily="@font/montserrat_semibold"
            android:visibility="invisible"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintBottom_toTopOf="@+id/login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_medium"
            android:visibility="invisible"
            app:autoSizeTextType="uniform"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

        <ImageView
            android:id="@+id/bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bar"
            android:alpha="0.3"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bonte_name" />

        <ImageView
            android:id="@+id/sign_in_button"
            android:src="@drawable/button_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.3"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/return_to_onboarding_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.979"
            app:layout_constraintWidth_percent="0.75" />

        <ImageView
            android:id="@+id/googleSymbol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/google_icon"
            android:visibility="invisible"
            android:layout_marginStart="16dp"
            app:layout_constraintHeight_percent="0.04"
            app:layout_constraintWidth_percent="0.05"
            app:layout_constraintBottom_toBottomOf="@+id/sign_in_button"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="@+id/sign_in_button"
            app:layout_constraintTop_toTopOf="@+id/sign_in_button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginButtonText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/log_in_button"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_bold"
            android:visibility="invisible"
            android:layout_marginStart="4dp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/sign_in_button"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
            app:layout_constraintHeight_percent="0.04"
            app:layout_constraintHorizontal_bias="0.187"
            app:layout_constraintStart_toEndOf="@+id/googleSymbol"
            app:layout_constraintTop_toTopOf="@+id/sign_in_button"
            app:layout_constraintVertical_bias="0.54"
            app:layout_constraintWidth_percent="0.5" />

        <ImageView
            android:id="@+id/return_to_onboarding_button"
            android:src="@drawable/button_transparent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.3"
            android:visibility="invisible"
            app:layout_constraintWidth_percent="0.75"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.948" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/returnButtonText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/return_to_onboarding"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:fontFamily="@font/montserrat_medium"
            android:visibility="invisible"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            app:layout_constraintWidth_percent="0.45"
            app:layout_constraintHeight_percent="0.038"
            app:layout_constraintBottom_toBottomOf="@+id/return_to_onboarding_button"
            app:layout_constraintEnd_toEndOf="@+id/return_to_onboarding_button"
            app:layout_constraintStart_toStartOf="@+id/return_to_onboarding_button"
            app:layout_constraintTop_toTopOf="@+id/return_to_onboarding_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>